Enhancements for Shenandoah's generational mode
Reviewed-by: rkennke, shade